# AutoKaggle

./: .gitignore  AGENTS.md  README.md  analysis.py  experiment.py  experimenter.md  main.py  prepare.py  program.md  promotion.py  pyproject.toml  runner.py  supervisor.md  train.py
.claude/: settings.json
.codex/: config.toml
.codex/agents/: analyst.toml  scientist.toml  strategist.toml
agents/: analyst.md  program.md  scientist.md  shared.md  supervisor.md
agents/analyst/: analysis.py  analyst-findings.md  analyst-hypotheses.md  analyst-hypothesis.md  analyst-knowledge.md  role.md
agents/contracts/: analyst.md  scientist.md  strategist.md
agents/engineer/: promotion.py  role.md
agents/scientist/: experiment.py  role.md  scientist-guidance.md  scientist-knowledge.md  scientist-results.md  scientist-task.md
agents/strategist/: role.md  strategy-idea-cookbook.md  strategy-lifecycle-guide.md  strategy-request.md  (+1 more)
docs/: codex-migration.md
harness/: analysis_runner.py  dataset.py  experiment_runner.py  promotion_runner.py  scientist_contract.py  scientist_runner.py  submission.py  supervisor_snapshot.py
history/: analyses.md  experiments.md  submissions.md
roles/: analyst.md  engineer.md  scientist.md  strategist.md  supervisor.md
state/: analyst-task.md  backlog.md  memory.md  portfolio.md  run-state.md  scientist-task.md
tests/: test_analysis_runner.py  test_dataset.py  test_experiment_runner.py  test_promotion_runner.py  test_scientist_runner.py  test_submission.py  test_supervisor_snapshot.py
work/: analysis.py  experiment.py
(+4 files in other folders)
