[project]
name = "autokaggle"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "kaggle>=2.0.0",
    "lightgbm>=4.6.0",
    "pandas>=2.3.0",
    "pytabkit>=1.7.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.47.0",
    "xgboost>=3.2.0",
]
